# STM32L4xx_USB_Device

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  STM32L412.ld  gcc-arm-none-eabi.cmake  main.c
bsp/: CMakeLists.txt
bsp/inc/: bsp.h  stm32_assert.h  stm32_cpu_delay.h
bsp/src/: bsp.c
inc/: usbd.h  usbd_core.h  usbd_desc.h  usbd_hw.h  usbd_hw_user_definitions.h  usbd_request.h
src/: main.c  usbd_core.c  usbd_hw.c  usbd_request.c
usbd_cdc/: CMakeLists.txt
usbd_cdc/inc/: usbd_cdc.h  usbd_cdc_request.h
usbd_cdc/src/: usbd_cdc.c
usbd_core/: CMakeLists.txt
usbd_core/inc/: usbd_core.h  usbd_hw.h  usbd_request.h
usbd_core/src/: usbd_core.c
